--- a/About.html
+++ b/About.html
@@ -9,8 +9,30 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
         <link rel="stylesheet" href="styleabout.css">
     </head>
+ <body>
 
-    <div id="carouselExampleCaptions" class="carousel slide">
+      <header class="header">
+        <a href="#" class="logo"><img src="images/fab shrinked.png"></a>
+        <nav class="navbar">
+          <a href="index.html" class="navi">Home</a>
+          <a href="page2.html" class="navi">Services</a>
+          <a href="page3.html" class="navi">About</a>
+          <a href="page4.html" class="navi">Case Studies</a>
+          <a href="page5.html"><button class="button">CONTACT</button></a>
+        </nav>
+      </header>
+      <!--animation-->
+      <div class="anim"></div>
+      <div class="anim" style="top: 65%;"></div>
+      <div class="anim" style="top: 35%;"></div>
+      <div class="maintext">
+        <div class="animated-figure"></div>
+        <h1 style="font-family: mRegular;">NOT JUST EVERY<br> DESIGN & DEVELOPMENT<br> AGENCY</h1>
+      </div>
+      <div class="secondmain">
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+            <div id="carouselExampleCaptions" class="carousel slide">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -18,27 +40,24 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="images/services1.png" class="d-block w-100" alt="...">
+                <img src="images/trip1.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption">
-                  <h5>First slide label</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
-                  <p><a href="#" class="btn btn-warning mt3">Learn more</a></p>
+                  <h5>First To Respond</h5>
+                  <p>Fastest responding time by our team.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="images/services2.png" class="d-block w-100" alt="...">
+                <img src="images/trip2.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption">
-                  <h5>Second slide label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
-                  <p><a href="#" class="btn btn-warning mt3">Learn more</a></p>
+                  <h5>From Simple To Complex</h5>
+                  <p>You choose the design from the simpliest style to the most complex one.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="images/services3.png" class="d-block w-100" alt="...">
+                <img src="images/trip3.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
-                  <p><a href="#" class="btn btn-warning mt3">Learn more</a></p>
+                  <h5>Up To Newest Webdesing Tactics</h5>
+                  <p>We constantly train our team to match up the new technology</p>
                 </div>
               </div>
             </div>
@@ -51,6 +70,7 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
+          <br>
 
     
           <!--About bruda-->
@@ -66,7 +86,7 @@
                     <div class="col-lg-8 col-md-12 col-12 ps-lg-5 mt-md-5">
                         <div class="about-text text-white">
                             <h2>you ask and we provide</h2>
-                            <p>At BBROS we work with you to gain in-depth insight into your product idea and the underlying<br>
+                            <p>At FAB we work with you to gain in-depth insight into your product idea and the underlying<br>
                                 business value - we feel that there is nothing more essential than understanding your vision<br>
                                 and context. This will enable us to present you with a tailor-made offer for the project.<br>
                                 Always there to work on Software Developments which stress the importance of individuals<br>
@@ -98,9 +118,9 @@
                             <div class="card-body">
                                 <i class="bi bi-star"></i>
                                 <h3 class="card-title">Best Quality</h3>
-                                <p class="lead">once I was 7 yo<br>
-                                    once I was 25 yo<br>
-                                    by 11 burning it<br>
+                                <p class="lead">Mobile app development services<br>
+                                  focus on creating applications <br>
+                                  for smartphones and tablets.<br>
                                 </p>
                                 <button class="btn btn-warning text-dark">Read more</button>
                             </div>
@@ -111,9 +131,9 @@
                             <div class="card-body">
                                 <i class="bi bi-star-half"></i>
                                 <h3 class="card-title">E-Commerce</h3>
-                                <p class="lead">once I was 7 yo<br>
-                                    once I was 25 yo<br>
-                                    by 11 burning it<br>
+                                <p class="lead">E-commerce services<br>
+                                       involve creating and managing<br>
+                                  online stores for businesses.<br>
                                 </p>
                                 <button class="btn btn-warning text-dark">Read more</button>
                             </div>
@@ -123,10 +143,10 @@
                         <div class="card text-white text-center bg-dark pb-2">
                             <div class="card-body">
                                 <i class="bi bi-star-fill"></i>
-                                <h3 class="card-title">Data Handling</h3>
-                                <p class="lead">once I was 7 yo<br>
-                                    once I was 25 yo<br>
-                                    by 11 burning it<br>
+                                <h3 class="card-title">Web Hosting</h3>
+                                <p class="lead">Web hosting services involve providing<br>
+                                  the infrastructure and technologies<br>needed
+                                  to make a website accessible.<br>
                                 </p>
                                 <button class="btn btn-warning text-dark">Read more</button>
                             </div>
@@ -161,9 +181,11 @@
                       <div class="img-area mb4">
                         <img src="images/foto1.png" alt="" class="img-fluid">
                       </div>
-                      <h3 class="card-title">BBROS</h3>
-                      <p class="lead">yo brother asdasdasd<br>aniosdhasdk<br></p>
-                      <button class="btn btn-warning text-dark">Learn More</button>
+                      <h3 class="card-title">CDF</h3>
+                      <p class="lead">For more details you<br> can visit their website<br></p>
+                      <a href="https://kcdf.org/" target="_blank">
+                        <button class="btn btn-warning text-dark">Learn More</button>
+                      </a>
                     </div>
                   </div>
                 </div>
@@ -173,9 +195,11 @@
                       <div class="img-area mb4">
                         <img src="images/foto2.png" alt="" class="img-fluid">
                       </div>
-                      <h3 class="card-title">BBROS</h3>
-                      <p class="lead">yo brother asdasdasd<br>aniosdhasdk<br></p>
-                      <button class="btn btn-warning text-dark">Learn More</button>
+                      <h3 class="card-title">Interex</h3>
+                     <p class="lead">For more details you<br> can visit their website<br></p>
+                      <a href="https://interex-rks.com/" target="_blank">
+                        <button class="btn btn-warning text-dark">Learn More</button>
+                      </a>
                     </div>
                   </div>
                 </div>
@@ -185,9 +209,11 @@
                       <div class="img-area mb4">
                         <img src="images/foto3.png" alt="" class="img-fluid">
                       </div>
-                      <h3 class="card-title">BBROS</h3>
-                      <p class="lead">yo brother asdasdasd<br>aniosdhasdk<br></p>
-                      <button class="btn btn-warning text-dark">Learn More</button>
+                      <h3 class="card-title">Comodita Home</h3>
+                    <p class="lead">For more details you<br> can visit their website<br></p>
+                      <a href="https://www.comoditahome.com/ks/" target="_blank">
+                        <button class="btn btn-warning text-dark">Learn More</button>
+                      </a>
                     </div>
                   </div>
                 </div>
@@ -197,9 +223,11 @@
                       <div class="img-area mb4">
                         <img src="images/foto4.png" alt="" class="img-fluid">
                       </div>
-                      <h3 class="card-title">BBROS</h3>
-                      <p class="lead">yo brother asdasdasd<br>aniosdhasdk<br></p>
-                      <button class="btn btn-warning text-dark">Learn More</button>
+                      <h3 class="card-title">Art Motion</h3>
+                      <p class="lead">For more details you<br> can visit their website<br></p>
+                      <a href="https://artmotion.net/" target="_blank">
+                        <button class="btn btn-warning text-dark">Learn More</button>
+                      </a>
                     </div>
                   </div>
                 </div>
@@ -220,11 +248,12 @@
                 </tr>
               </thead>
               <tbody>
-                <tr>
+               <tr>
                 <th scope="row">1</th>
-                <td>CDF</td>
-                <td>Republic of Kosovo</td>
+                <td class="p-3">CDF</td>
+                <td class="p-3">  Republic of Kosovo</td>
                 </tr>
+
 
                 <tr>
                 <th scope="row">2</th>
@@ -371,12 +400,61 @@
             </div>
           </section>
 
+   <section class="footer">
+            <div class="footer-row">
+              <div class="footer-col">
+                <h4>Info</h4>
+                <ul class="links">
+                  <li><a href="#">About Us</a></li>
+                  <li><a href="#">Compressions</a></li>
+                  <li><a href="#">Customers</a></li>
+                  <li><a href="#">Service</a></li>
+                  <li><a href="#">Collection</a></li>
+                </ul>
+              </div>
+              <div class="footer-col">
+                <h4>Explore</h4>
+                <ul class="links">
+                  <li><a href="#">Latest Designs</a></li>
+                  <li><a href="#">Themes</a></li>
+                  <li><a href="#">Popular Designs</a></li>
+                  <li><a href="#">Art Skills</a></li>
+                  <li><a href="#">New Uploads</a></li>
+                </ul>
+              </div>
+              <div class="footer-col">
+                <h4>Legal</h4>
+                <ul class="links">
+                  <li><a href="#">Customer Agreement</a></li>
+                  <li><a href="#">Privacy Policy</a></li>
+                </ul>
+              </div>
+              <div class="footer-col">
+                <h4></h4>
+                <p>
+                  Subscribe to our newsletter for a weekly dose
+                  of news, updates, helpful tips, and
+                  exclusive offers.
+                </p>
+                <form action="#">
+                  <input type="text" placeholder="Your email" required>
+                  <button type="submit">SUBSCRIBE</button>
+                </form>
+                <div class="icons">
+                  <i class="fa-brands fa-facebook-f"></i>
+                  <i class="fa-brands fa-twitter"></i>
+                  <i class="fa-brands fa-linkedin"></i>
+                  <i class="fa-brands fa-github"></i>
+                </div>
+              </div>
+            </div>
+        </section>
 
 
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 
-
+</body>
 
 </html>
