--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
       <nav class="navbar">
         <a href="index.html" class="navi">Home</a>
         <a href="page2.html" class="navi">Services</a>
-        <a href="page3.html" class="navi">About</a>
-        <a href="page4.html" class="navi">Case Studies</a>
+        <a href="about.html" class="navi">About</a>
+        <a href="Case.html" class="navi">Case Studies</a>
         <a href="page5.html"><button class="button">CONTACT</button></a>
       </nav>
     </header>
