--- a/page5.html
+++ b/page5.html
@@ -108,10 +108,10 @@
                 </select>
               </div>
               <keygen name="password">
-              <input type="password" placeholder="Enter any password(not required)"/>
+                           <input type="password" placeholder="Enter any password(not required)" autocomplete="password"/>
             </div>
             <div class="column">
-              <input type="text" placeholder="Enter your region" required />
+              <input type="text" placeholder="Enter your region" required autocomplete="Kosovo" />
               <input type="number" placeholder="Enter postal code" required />
             </div>
           </div>
