--- a/page5.html
+++ b/page5.html
@@ -23,7 +23,12 @@
         transition-timing-function: cubic-bezier(0.68, -0.55, 0.27, 1.55); /* Custom easing for a smooth slowdown */
       }
  </style>
-    <script defer src="page5.js"></script>
+    <script defer src="page5.js">
+        var head = "This is JavaScript in the head section.";
+        console.log(head);
+    </script>
+    </script>
+    
   </head>
   <div>
   <body style="background-color: black;">
